Enable preview features for tests (#38)